feat: styling changes, footer added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					/>
 					<p>Odin</p>
 				</div>
+				<footer><p>Photo by Halie West on Unsplash</p></footer>
 			</div>
 			<div class="right-form">
 				<h2>
