--- a/index.html
+++ b/index.html
@@ -20,13 +20,47 @@
 				<footer><p>Photo by Halie West on Unsplash</p></footer>
 			</div>
 			<div class="right-form">
-				<h2>
-					This is not a real online service! You know you need something like
-					this in your lief to help you realize your deepest dreams. Sign up now
-					to get started.
-				</h2>
-
-				<h2>Already have an account? <a href="">Login in</a></h2>
+				<div class="content-1">
+					<h2>
+						This is not a real online service! You know you need something like
+						this in your life to help you realize your deepest dreams. Sign up
+						now to get started.
+					</h2>
+					<h2>You <em>know</em> you want to.</h2>
+				</div>
+				<form>
+					<div class="form-content">
+						<h2 class="form-title">Let's do this!</h2>
+						<div class="form-field">
+							<label for="first_name">First Name</label>
+							<input type="text" id="first_name" name="first_name" />
+						</div>
+						<div class="form-field">
+							<label for="last_name">Last Name</label>
+							<input type="text" id="last_name" name="last_name" />
+						</div>
+						<div class="form-field">
+							<label for="email">Email</label>
+							<input type="text" id="email" name="email" />
+						</div>
+						<div class="form-field">
+							<label for="phone_number">Phone Number</label>
+							<input type="text" id="phone_number" name="phone_number" />
+						</div>
+						<div class="form-field">
+							<label for="password">Password</label>
+							<input type="text" id="password" name="password" />
+						</div>
+						<div class="form-field">
+							<label for="confirm_pass">Confirm Password</label>
+							<input type="text" id="confirm_pass" name="confirm_pass" />
+						</div>
+					</div>
+					<div class="content-3">
+						<button type="submit">Create Account</button>
+						<h3>Already have an account? <a href="">Log in</a></h3>
+					</div>
+				</form>
 			</div>
 		</div>
 	</body>
