--- a/index.html
+++ b/index.html
@@ -33,27 +33,37 @@
 						<h2 class="form-title">Let's do this!</h2>
 						<div class="form-field">
 							<label for="first_name">First Name</label>
-							<input type="text" id="first_name" name="first_name" />
+							<input type="text" id="first_name" name="first_name" required />
 						</div>
 						<div class="form-field">
 							<label for="last_name">Last Name</label>
-							<input type="text" id="last_name" name="last_name" />
+							<input type="text" id="last_name" name="last_name" required />
 						</div>
 						<div class="form-field">
 							<label for="email">Email</label>
-							<input type="text" id="email" name="email" />
+							<input type="email" id="email" name="email" required />
 						</div>
 						<div class="form-field">
 							<label for="phone_number">Phone Number</label>
-							<input type="text" id="phone_number" name="phone_number" />
+							<input
+								type="tel"
+								id="phone_number"
+								name="phone_number"
+								required
+							/>
 						</div>
 						<div class="form-field">
 							<label for="password">Password</label>
-							<input type="text" id="password" name="password" />
+							<input type="text" id="password" name="password" required />
 						</div>
 						<div class="form-field">
 							<label for="confirm_pass">Confirm Password</label>
-							<input type="text" id="confirm_pass" name="confirm_pass" />
+							<input
+								type="text"
+								id="confirm_pass"
+								name="confirm_pass"
+								required
+							/>
 						</div>
 					</div>
 					<div class="content-3">
