--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 					<div class="content-3">
 						<button type="submit">Create Account</button>
-						<h3>Already have an account? <a href="">Log in</a></h3>
+						<p>Already have an account? <a href="">Log in</a></p>
 					</div>
 				</form>
 			</div>
