feat: pattern matching for phone number

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 								type="tel"
 								id="phone_number"
 								name="phone_number"
+								pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
 								required
 							/>
 						</div>
