--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 						</div>
 						<div class="form-field">
 							<label for="password">Password</label>
-							<input type="text" id="password" name="password" required />
+							<input type="password" id="password" name="password" required />
 						</div>
 						<div class="form-field">
 							<label for="confirm_pass">Confirm Password</label>
 							<input
-								type="text"
+								type="password"
 								id="confirm_pass"
 								name="confirm_pass"
 								required
